--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-
-
-
 <!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><title>
 	틸코블렛 공동인증서 복사
-</title><meta http-equiv="X-UA-Compatible" content="IE=edge" /><meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" /><link href="/Resources/Css/style.css" rel="stylesheet" />
+</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+<link href="/Resources/Css/style.css" rel="stylesheet" />
 	<script src="/Resources/Scripts/jquery-3.5.1.min.js"></script>
 	<script src="/Resources/Scripts/TilkoSignWebSocket.min.js"></script>
 	<script type="text/javascript">
@@ -125,7 +126,7 @@
 								<div class="info-content clearfix">
 									<div class="item">사업자등록번호 : 776-86-00872 | 대표 : 손정민<br />
 										서울특별시 중구 다동길 5 광일빌딩 1501호, 1502호<br />
-										개인정보책임자 : 김대진
+										개인정보책임자 : 손정민
 									</div>
 									<div class="item">이메일 : <a href="mailto:help@tilko.net">help@tilko.net</a><br />
 										전화 : 1670-2822
